--- a/preload/style.css
+++ b/preload/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html, body {
   margin: 0;
 }
 
 html {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  height: 100%;
+	font-family: 'Roboto', sans-serif;
+	height: 100%;
 }
 
 body {
